--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -44,10 +44,10 @@
         <table id="table" class="table" border="2px solid">
             <thead class="line">
             <tr >
-                <th id="id">Идентификатор</th>
-                <th id="name">Название</th>
-                <th id="cost">Стоимость</th>
-                <th id="count">Количество</th>
+                <th id="id" >Идентификатор <i id="idsort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="name">Название <i id="namesort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="cost">Стоимость <i id="costsort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="count">Количество <i id="countsort" class="fa fa-sort" aria-hidden="true"></i></th>
                 <th id="btns"></th>
             </tr>
             </thead>
