--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button id="add" class="btn btn-default" data-dismiss="modal">Добавить</button>
+                        <button id="add" class="btn btn-default" >Добавить</button>
                     </div>
                 </div>
             </div>
