--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <table id="table" class="table">
             <thead class="thead-light">
             <tr >
-                <th id="id" scope="col"  >Идентификатор <i id="idsort" class="fa fa-sort" aria-hidden="true"></i></th>
-                <th id="name" scope="col">Название <i id="namesort" class="fa fa-sort" aria-hidden="true"></i></th>
-                <th id="cost" scope="col">Стоимость <i id="costsort" class="fa fa-sort" aria-hidden="true"></i></th>
-                <th id="count" scope="col">Количество <i id="countsort" class="fa fa-sort" aria-hidden="true"></i></th>
-                <th id="btns" scope="col"></th>
+                <th id="id" class="sorted" scope="col"  >Идентификатор <i id="idsort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="name" class="sorted" scope="col">Название <i id="namesort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="cost" class="sorted" scope="col">Стоимость <i id="costsort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="count" class="sorted" scope="col">Количество <i id="countsort" class="fa fa-sort" aria-hidden="true"></i></th>
+                <th id="btns"  scope="col"></th>
             </tr>
             </thead>
             <tbody id="tbody" class="tbody">
