--- a/index.html
+++ b/index.html
@@ -13,34 +13,20 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+    <div class="navbar bg-dark">
+        <div class="container  ">
+            <a  class="navbar-brand text-light">
+                <i class="fa fa-battery-quarter fa-2x" aria-hidden="true"></i>
+            </a>
+            <a class="text-light">
+                <i class="fa fa-vk fa-2x" aria-hidden="true"></i>
+            </a>
         </div>
-    </nav>
+    </div>
 </header>
 
 <main role="main" class="flex-shrink-0">
     <div class="container">
-
         <div class="row">
             <div class="col-8">
                 <table id="table" class="table">
@@ -109,15 +95,10 @@
             </div>
             <div class="col-4">
                 <div class="jumbotron">
-                    <h1 class="display-4">Hello, world!</h1>
-                    <p class="lead">Это простой пример блока с компонентом в стиле jumbotron для привлечения
-                        дополнительного внимания к содержанию или информации.</p>
-                    <hr class="my-4">
-                    <p>Использются служебные классы для типографики и расстояния содержимого в контейнере большего
-                        размера.</p>
-                    <p class="lead">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-                    </p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, amet corporis, cumque dolor ea,
+                    eligendi exercitationem inventore nobis pariatur quia quis repudiandae tenetur vitae. Fuga illum
+                    nobis officiis sint. Aut commodi debitis dolore explicabo hic id nihil perferendis quam repellendus
+                    sit? Accusantium animi dignissimos eius eveniet fugiat soluta! Adipisci, eos!
                 </div>
             </div>
         </div>
@@ -125,9 +106,9 @@
 </main>
 
 
-<footer class="footer mt-auto py-3">
-    <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+<footer class="footer mt-auto py-3 bg-secondary">
+    <div class="container" >
+        <p class="h5">Copyright...</p>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
