--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main role="main" class="flex-shrink-0">
     <div class="container">
         <div class="row">
-            <div class="col-8">
+            <div class="col-12 col-lg-8">
                 <table id="table" class="table">
                     <thead class="thead-light">
                     <tr>
@@ -59,7 +59,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">Идентификатор</span>
                                     </div>
-                                    <input id="dataId" type="text" class="form-control" aria-label="Small"
+                                    <input id="dataId" type="number" class="form-control" aria-label="Small"
                                            aria-describedby="inputGroup-sizing-sm">
                                 </div>
                                 <div class="input-group input-group-sm mb-3">
@@ -73,14 +73,14 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">Стоимость</span>
                                     </div>
-                                    <input id="dataCost" type="text" class="form-control" aria-label="Small"
+                                    <input id="dataCost" type="number" class="form-control" aria-label="Small"
                                            aria-describedby="inputGroup-sizing-sm">
                                 </div>
                                 <div class="input-group input-group-sm mb-3">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">Количество</span>
                                     </div>
-                                    <input id="dataCount" type="text" class="form-control" aria-label="Small"
+                                    <input id="dataCount" type="number" class="form-control" aria-label="Small"
                                            aria-describedby="inputGroup-sizing-sm">
                                 </div>
                             </div>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-lg-4">
                 <div class="jumbotron">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, amet corporis, cumque dolor ea,
                     eligendi exercitationem inventore nobis pariatur quia quis repudiandae tenetur vitae. Fuga illum
