--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <main role="main" class="flex-shrink-0">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-8">
-                <table id="table" class="table">
+            <div class="col-12 col-lg-8 ">
+                <table id="table" class="table table-responsive-xl">
                     <thead class="thead-light">
                     <tr>
                         <th id="id" class="sorted" scope="col">Идентификатор <i id="idsort" class="fa fa-sort"
